# learn_webgpu

./: Cargo.toml  build.rs
src/: camera.rs  lib.rs  light.wgsl  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
